--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,9 @@ on:
       - master
   pull_request:
 
-concurrency:
-  group: ci-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   build-and-verify:
     runs-on: ubuntu-latest
-
     services:
       postgres:
         image: postgres:15
@@ -25,58 +20,57 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U surplus -d surplus"
+          --health-cmd "pg_isready -U surplus"
           --health-interval 10s
           --health-timeout 5s
-          --health-retries 10
-
+          --health-retries 5
     env:
       DATABASE_URL: postgres://surplus:surplus@localhost:5432/surplus
       JWT_ACCESS_SECRET: test-secret
       NODE_ENV: test
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8.15.4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: pnpm
+
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Prepare pnpm
+        run: corepack prepare pnpm@9.15.1 --activate
+
+      - name: Show pnpm version
+        run: pnpm -v
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile=false
 
+      - name: Generate Prisma client
+        run: pnpm run prisma:generate
+
       - name: Lint
         run: pnpm lint
-
-      - name: Prisma validate (apps/api)
-        working-directory: apps/api
-        run: pnpm prisma:validate
-
-      - name: Prisma generate (apps/api)
-        working-directory: apps/api
-        run: pnpm prisma:generate
-
-      # Since migrations/ is deleted and CI DB is ephemeral, use db push.
-      - name: Prisma db push (apps/api)
-        working-directory: apps/api
-        run: pnpm prisma:db:push
 
       - name: Typecheck
         run: |
           pnpm exec tsc -p apps/api/tsconfig.json --noEmit
           pnpm exec tsc -p apps/worker/tsconfig.json --noEmit
           pnpm exec tsc -p apps/web/tsconfig.json --noEmit
-
+      - name: Run migrations
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main' && env.DATABASE_URL != ''
+        run: |
+          SCHEMA_PATH="apps/api/prisma/schema.prisma"
+          if [ -f "$SCHEMA_PATH" ] && [ -n "${DATABASE_URL:-}" ]; then
+            pnpm --filter @surplus/api exec prisma migrate deploy --schema "$SCHEMA_PATH"
+          else
+            echo "Skipping migrations (missing DATABASE_URL or schema at $SCHEMA_PATH)."
+          fi
       - name: Tests
         run: pnpm test
 
-      - name: Build (apps only)
+      - name: Build
         run: pnpm -r --filter "./apps/**" build
