--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -2,7 +2,7 @@
   "name": "@surplus/rules",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
